--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
         <!-- Image Upload -->
         <div class="card shadow-sm p-4 mb-4">
-            <form id="upload-form" enctype="multipart/form-data">
+            <form id="upload-form" method="POST" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="image" class="form-label">
                         <i class="fa-solid fa-image"></i> Upload Vehicle Image:
