--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                     <label for="image" class="form-label">
                         <i class="fa-solid fa-image"></i> Upload Vehicle Image:
                     </label>
-                    <input type="file" name="image" id="image" class="form-control" accept="image/*">
+                    <input type="file" name="image" id="image" class="form-control" accept="image/*" capture="environment">
                 </div>
                 <button type="submit" class="btn btn-primary w-100">
                     <i class="fa-solid fa-upload"></i> Submit
