--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <form id="upload-form" method="POST" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="image" class="form-label">Upload Vehicle Image:</label>
-                    <input type="file" name="image" id="image" class="form-control" accept="image/*">
+                    <input type="file" name="image" id="image" class="form-control" accept="image/*" capture>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Submit</button>
             </form>
